objects/Cart_Entitlement__c.object
<CustomObject>
    <fields>
        <fullName>Account_Information__c</fullName>
        <formula>IF( ISBLANK( Account__c ),&apos;&apos;, 
IF(ISPICKVAL(RelatedUPR__r.Application__r.FG_Account_Field__c,&apos;Customer_Number__c&apos;),&apos;Customer Number: &apos;+ Account__r.Customer_Number__c,
IF(ISPICKVAL(RelatedUPR__r.Application__r.FG_Account_Field__c,&apos;PAES_Number__c&apos;),&apos;PAES Number: &apos;+ Account__r.PAES_Number__c,
IF(ISPICKVAL(RelatedUPR__r.Application__r.FG_Account_Field__c,&apos;AIMS_Number__c&apos;),&apos;AIMS Number: &apos;+ Account__r.AIMS_Number__c,
&apos;GUID: &apos;+Account__r.GUID__c))))</formula>
        <label>Account Information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Entilements In Car</relationshipLabel>
        <relationshipName>Requested_FG_Ents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ent_code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entitlement Code</label>
        <referenceTo>Entitlements__c</referenceTo>
        <relationshipName>Entilements_In_Car</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_App__c</fullName>
        <label>Parent App</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Cart_Application__c.UPR_Number__c</field>
                <operation>equals</operation>
                <valueField>$Source.RelatedUPR__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Cart_Application__c</referenceTo>
        <relationshipLabel>Cart Entitlements</relationshipLabel>
        <relationshipName>Cart_Entitlements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RelatedUPR__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>User Provisioning Request</label>
        <referenceTo>UserProvisioningRequest</referenceTo>
        <relationshipLabel>Requested Entitlements</relationshipLabel>
        <relationshipName>uprentitlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Cart Entitlement</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Entitlement In Cart Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entilements In Car</pluralLabel>
    <recordTypes>
        <fullName>Fine_Grained</fullName>
        <active>true</active>
        <label>Fine Grained</label>
    </recordTypes>
    <recordTypes>
        <fullName>Role</fullName>
        <active>true</active>
        <label>Role</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>